Dokonany Reverse engineering bazy danych
Nowosci:
odwzorowanie istniejącej bazy danych w kodzie poprzez polecenie:
Scaffold-DbContext "Name=ConnectionStrings:CharityEventsConnectionString" Pomelo.EntityFrameworkCore.MySql -OutputDir Entities

--- a/CharityEventsApi/appsettings.Development.json
+++ b/CharityEventsApi/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "CharityEventsConnectionString": "Server=localhost;Port=3306;Database=CharityEventsDb;Username=root;Password="
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
