--- a/CharityEventsApi/appsettings.json
+++ b/CharityEventsApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "CharityEventsConnectionString": "Server=localhost;Port=3306;Database=CharityEventsDb;Username=root;Password="
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
