--- a/CharityEventsApi/appsettings.json
+++ b/CharityEventsApi/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "CharityEventsConnectionString": "Server=localhost;Port=3306;Database=CharityEventsDb;Username=root;Password="
   },
+  "Authentication": {
+    "JwtKey": "private_key_to_change_asd.1/2gha",
+    "JwtExpireDays": 15,
+    "JwtIssuer": "http://charityevent.com"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
