--- a/CharityEventsApi/CharityEventsApi.csproj
+++ b/CharityEventsApi/CharityEventsApi.csproj
@@ -25,6 +25,8 @@
 
   <ItemGroup>
     <Folder Include="Models\Validators\" />
+    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 	
 	<ItemGroup>
