--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,11 +31,11 @@ jobs:
          name: charityeventsapi-artifact
          path: ${{ env.DOTNET_ROOT }}/api
 
-  deploy-prod:
+  deploy:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Prod'
+      name: 'Deploy'
       url: ${{ steps.deploy-to-azure.outputs.webapp-url }}
     steps:
       - name: Download a Build Artifact
